# cicd-delivery

./: CONTRIBUTING.md  README.md  __init__.py  conftest.py  delivery.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.yaml  config.yaml.example  settings.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: settings.py
src/delivery/: __init__.py  gerrit_client.py  orchestrator.py
src/manifest/: __init__.py  downloader.py  filter.py  models.py  parser.py
src/transformer/: __init__.py  branch_transformer.py  repo_transformer.py
tests/: __init__.py  test_config.py  test_example.py  test_filter.py  test_models.py  test_parser.py  test_transformer.py
util/: manifest_filter.py
